fix: fix /home link

--- a/src/layouts/postLayout.astro
+++ b/src/layouts/postLayout.astro
@@ -51,7 +51,7 @@ const { frontmatter } = Astro.props;
         <article>
             <slot/>
         </article>
-        <a id="go-home" href="../index.html">home</a>
+        <a id="go-home" href="../../index.html">home</a>
     </main>
 </body>
 </html>
