feat: centralize and add favicon

--- a/src/layouts/postLayout.astro
+++ b/src/layouts/postLayout.astro
@@ -39,10 +39,11 @@ const { frontmatter } = Astro.props;
 
 <html>
 <head>
+    <link rel="icon" type="image/svg+xml" href="/lambda.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>indu</title>
+    <title>lambda</title>
 </head>
 <body>
     <main>
