--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,11 +33,12 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 1.25rem;
+    height: 100vh;
 }
 
 #title {
-    font-size: 5em;
-    font-style: italic;
+    font-size: 3em;
+    font-style: normal;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -47,6 +48,12 @@ a {
     text-decoration: none;
 }
 
+#title:hover {
+    text-decoration: underline;
+}
+
+main:has(#title:hover) a,
+#title:hover,
 a:hover {
     color: var(--orange);
 }
