fix: posts centralizing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const posts = Object.values(import.meta.glob("./posts/*.md", { eager: true }));
         <meta name="generator" content={Astro.generator} />
         <title>lambda</title>
     </head>
-    <body>
+    <body class="centralize">
         <main>
             <h1 id="title">lambda</h1>
 
