--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,9 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 1.25rem;
+}
+
+.centralize {
     height: 100vh;
 }
 
